architecture-references/multicluster-gateway-auth-policy/cluster2/cluster2-auth.yaml
# AuthorizationPolicy object for server service in backend namespace
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  annotations:
    buoyant.io/created-by: linkerd policy generate
  name: server-8080
  namespace: backend
spec:
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: MeshTLSAuthentication
    name: server-8080
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: server-8080
---
# HTTPRoute object for server service probes in backend namespace
apiVersion: policy.linkerd.io/v1beta1
kind: HTTPRoute
metadata:
  name: server-probes
  namespace: backend
spec:
  parentRefs:
    - name: server
      kind: Server
      group: policy.linkerd.io
      namespace: backend
  rules:
    - matches:
      - path:
          value: "/live"
        method: GET
      - path:
          value: "/ready"
        method: GET
---
# AuthorizationPolicy object for server service probe endpoints in backend namespace
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  annotations:
    buoyant.io/created-by: linkerd policy generate
  name: server-probes
  namespace: backend
spec:
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: NetworkAuthentication
    name: server-probes
  targetRef:
    group: policy.linkerd.io
    kind: HTTPRoute
    name: server-probes
