architecture-references/multicluster-gateway-auth-policy/cluster2/cluster2-gateway-emojivoto-auth.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  labels:
    app: linkerd-gateway-emojivoto
    linkerd.io/extension: multicluster
  name: linkerd-gateway-emojivoto
  namespace: linkerd-multicluster
spec:
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: MeshTLSAuthentication
    name: any-meshed
    namespace: linkerd-multicluster
  - group: policy.linkerd.io
    kind: NetworkAuthentication
    name: source-cluster
    namespace: linkerd-multicluster
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: linkerd-gateway-emojivoto
---
